--- a/app/globals.css
+++ b/app/globals.css
@@ -113,3 +113,32 @@ footer a i {
   -webkit-text-fill-color: transparent;
   animation: shine 1.5s ease-out;
 }
+@keyframes slideDownAndFade {
+  from {
+    opacity: 0;
+    transform: translateY(-5px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideUpAndFade {
+  from {
+    opacity: 0;
+    transform: translateY(5px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+[data-side="top"] {
+  animation: slideDownAndFade 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+[data-side="bottom"] {
+  animation: slideUpAndFade 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
